--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://tech.eshaiju.in
 title: Rails Kitchen
-subtitle: Its a place to write on stuff I learned recently.
+subtitle: It's a place to write on stuff I learned recently.
 author: Shaiju E
 simple_search: https://www.google.com/search
 description:
